--- a/features/room/src/main/res/layout/fragment_room_info.xml
+++ b/features/room/src/main/res/layout/fragment_room_info.xml
@@ -7,8 +7,8 @@
     android:layout_gravity="center"
     android:orientation="vertical">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/roomTopAppBar_linearLayout"
+    <LinearLayout
+        android:id="@+id/topAppBar_linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
@@ -26,27 +26,21 @@
             android:clickable="true"
             android:contentDescription="@string/content_description"
             android:focusable="true"
-            android:src="@drawable/ic_arrow_back"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:src="@drawable/ic_arrow_back" />
 
         <TextView
             android:id="@+id/roomInfoTitle_textView"
             style="@style/black18"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="54dp"
             android:textAlignment="center"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@+id/back_imageView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/back_imageView"
-            app:layout_constraintTop_toTopOf="@+id/back_imageView"
-            app:layout_constraintVertical_bias="0.538"
             tools:text="Steigenberger Makadi" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/roomList_recyclerView"
