Added payment info feature module

--- a/features/payment/src/main/res/layout/fragment_payment_info.xml
+++ b/features/payment/src/main/res/layout/fragment_payment_info.xml
@@ -5,9 +5,9 @@
     android:layout_height="match_parent"
     android:background="@color/white">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:id="@+id/topAppBar_linearLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,25 +24,21 @@
             android:clickable="true"
             android:contentDescription="@string/content_description"
             android:focusable="true"
-            android:src="@drawable/ic_arrow_back"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:src="@drawable/ic_arrow_back" />
 
         <TextView
             android:id="@+id/paymentInfoTitle_textView"
             style="@style/black18"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/payment_title"
+            android:layout_gravity="center"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="54dp"
+            android:text="@string/paid_order"
             android:textAlignment="center"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="@+id/back_imageView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/back_imageView"
-            app:layout_constraintVertical_bias="0.538" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:textSize="18sp" />
+
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/payment_imageView"
@@ -52,11 +48,11 @@
         android:contentDescription="@string/content_description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
+        app:layout_constraintTop_toBottomOf="@id/topAppBar_linearLayout"
         app:srcCompat="@drawable/ic_payment" />
 
     <TextView
-        android:id="@+id/paymentmessage_textView"
+        android:id="@+id/paymentMessage_textView"
         style="@style/black22medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -64,7 +60,7 @@
         android:text="@string/accepting"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/payment_imageView" />
+        app:layout_constraintTop_toBottomOf="@id/payment_imageView" />
 
     <TextView
         android:id="@+id/paymentComment_textView"
@@ -78,15 +74,17 @@
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/paymentmessage_textView" />
+        app:layout_constraintTop_toBottomOf="@id/paymentMessage_textView" />
 
     <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
+        android:id="@+id/bottomAppBar_linearLayout"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <Button
             android:id="@+id/confirmPayment_button"
@@ -103,6 +101,70 @@
             android:textColor="@color/white"
             android:textSize="16sp"
             android:tint="@color/blue" />
+
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/hotelInfo_progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/bottomAppBar_linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/topAppBar_linearLayout" />
+
+    <ImageView
+        android:id="@+id/error_imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        android:contentDescription="@string/content_description"
+        android:src="@drawable/ic_error"
+        app:layout_constraintBottom_toTopOf="@+id/error_textView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/topAppBar_linearLayout"
+        app:layout_constraintVertical_chainStyle="packed" />
+
+    <TextView
+        android:id="@+id/error_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        android:fontFamily="@font/sf_pro_display_regular"
+        android:lineSpacingExtra="4sp"
+        android:text="@string/error_message"
+        android:textAlignment="center"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@id/tryAgain_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/error_imageView" />
+
+    <Button
+        android:id="@+id/tryAgain_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/button_primary"
+        android:letterSpacing="0.01"
+        android:text="@string/try_again"
+        android:textAllCaps="false"
+        app:layout_constraintBottom_toTopOf="@id/bottomAppBar_linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/error_textView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
