--- a/features/hotel/src/main/res/layout/fragment_hotel_info.xml
+++ b/features/hotel/src/main/res/layout/fragment_hotel_info.xml
@@ -131,7 +131,7 @@
         android:letterSpacing="0.01"
         android:text="@string/try_again"
         android:textAllCaps="false"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/bottomAppBar_linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/error_textView"
