--- a/features/payment/src/main/res/layout/fragment_payment_info.xml
+++ b/features/payment/src/main/res/layout/fragment_payment_info.xml
@@ -22,6 +22,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="14dp"
             android:layout_marginBottom="11dp"
+            android:visibility="invisible"
             android:clickable="true"
             android:contentDescription="@string/content_description"
             android:focusable="true"
