--- a/features/payment/src/main/res/layout/fragment_payment_info.xml
+++ b/features/payment/src/main/res/layout/fragment_payment_info.xml
@@ -36,7 +36,7 @@
             android:layout_gravity="center"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="54dp"
-            android:text="@string/paid_order"
+            android:text="@string/payment_title"
             android:textAlignment="center"
             android:textSize="18sp" />
 
